--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://root:123456@localhost:5432/tiktok_dev?schema=public"
+REFRESH_TOKEN_SECRET="mysecret"
+ACCESS_TOKEN_SECRET="mysecret"
+APP_URL=http://localhost:3000
