--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
